--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/data-tables": "^13.2.2",
     "azure-iot-common": "^1.13.2",
     "azure-iot-device": "^1.18.3",
     "azure-iothub": "^1.16.4",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.3"
   }
 }
