--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "azure-iot-device": "^1.18.3",
     "azure-iothub": "^1.16.4",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
