Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_plantario-backend.yml
+++ b/.github/workflows/main_plantario-backend.yml
@@ -42,9 +42,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -54,13 +52,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_6B45BD10143C4EF592E8974B54D39BAD }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8BE9A5EBB6E44FB59D0EE2CC943EBCBC }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_3AA00B23613F4523B2BCBEC665411085 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -68,4 +59,4 @@ jobs:
           app-name: 'Plantario-BACKEND'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FA74ECDF83FC4B409E433D5A74825EF2 }}
